# azure-openai-workshop

./: .env.backup  .env.example  .env.sample  .gitignore  01-deploy-first-model.ipynb  01-hello-world.ipynb  02-foundry-evals.ipynb  02-foundry-tracing.ipynb  02-tokens-and-usage.ipynb  02-tracing.ipynb  021-tracing.ipynb  03-agent_evaluators.ipynb  03-agents.ipynb  03-embeddings.ipynb  04-agent_evaluators.ipynb  04-agents.ipynb  04-prompt-engineering.ipynb  04-tracing_agents.ipynb  05-advanced-prompt-engineering.ipynb  05-agent-evaluators.ipynb  05-agents_tracing.ipynb  05-foundry-tracing.ipynb  05_tracing_agents.ipynb  06-agents_tracing.ipynb  06-fine-tuning.ipynb  06-fine_tuning.ipynb  06-function-calling.ipynb  06-function_calling.ipynb  07-azure-search.ipynb  08-assitants.ipynb  09-azure-search.ipynb  09-fine-tuning.ipynb  10_GPT-4V.ipynb  11-latency.ipynb  12-aoai_entra.ipynb  13-ai_inference.ipynb  14-azure-ai-agent-service.ipynb  14-azureai-agent.ipynb  QUICK_START.md  README.md  (+12 more)
adx/: .gitignore  README.md
adx/notebooks/: .env.example  03-security-pentesting-adx.ipynb  security-pentesting-adx.ipynb
adx/schema/: SETUP-GUIDE.md  TROUBLESHOOTING.md  adx-schema-setup-fixed.kql  adx-schema-setup.kql  adx-schema-verification.kql  complete-schema-setup.kql  step1-create-otel-table.kql  step2-create-security-table.kql  step3-create-llm-table.kql  step4-create-mappings.kql  test-connection.kql  test-tables-exist.kql
adx/terraform/: README.md  adx-outputs.tf  adx-terraform.tfvars.example  adx-variables.tf  deploy-adx-complete.sh  main.tf  setup-adx-schema.sh  validate-adx-setup.sh
data/prompts/: email-format.txt  specify-tone.txt
infrastructure/: README.md
infrastructure/bicep/: README.md  deploy.sh  main.bicep  main.json  parameters.bicepparam
infrastructure/bicep/modules/: foundry.bicep
infrastructure/terraform/: .terraform.lock.hcl  README.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
legacy/: .env.sample  04-prompt-engineering.ipynb  05-advanced-prompt-engineering.ipynb  07-azure-search.ipynb  10-GPT-4V.ipynb  11-latency.ipynb  14-azure-ai-agent-service.ipynb  15- STT-voice to text.py  16- structured outputs.ipynb  requirements.txt
legacy/data/prompts/: basic.txt  (+1 more)
prerequisites/: Readme.md  createAll.ps1  deploy.json  deploy1.json  deployAll.bicep
scripts/: cleanup_validation.py  secret_scanner.py
src/azure_openai_workshop/: __init__.py
